[workspace]
resolver = "3"
members = [
    "library",
    "examples/bencode_fibonacci",
    "examples/bencode_read_torrent_files",
    "examples/bencode_torrent_to_yaml",
    "examples/bencode_torrent_to_toml",
    "examples/bencode_torrent_to_json",
    "examples/bencode_torrent_to_xml",
    "examples/torrent_file_lib",
    "examples/bencode_utility_lib",
    "examples/bencode_create_at_runtime",
    "examples/bencode_node_api",
    "examples/bencode_in_memory",
    "examples/bencode_dictionary_ops",
    "examples/bencode_list_ops",
    "examples/bencode_error_handling",
    "examples/bencode_format_conversions",
    "examples/bencode_zerocopy",
    "examples/bencode_memory_pool",
    "examples/bencode_const_generics",
    "examples/bencode_minimal",
    "examples/bencode_full",
]
